--- a/style.css
+++ b/style.css
@@ -43,9 +43,11 @@ img {
 #artist {
   font-size: 18px;
   opacity: 0.7;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-/* Scrolling animation */
 .scroll {
   animation: scroll-left 10s linear infinite;
 }
