--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   align-items: center;
   height: 150px;
-  width: 1200px;
+  width: 600px;
   background-color: #000;
   color: #fff;
   border-left: 5px solid #1DB954;
@@ -38,6 +38,7 @@ img {
   white-space: nowrap;
   display: inline-block;
   position: relative;
+  min-width: max-content; /* ← important */
 }
 
 #artist {
